Fixed icon c spacing

--- a/src/client/src/components/_TechnologyBar/index.less
+++ b/src/client/src/components/_TechnologyBar/index.less
@@ -37,20 +37,20 @@
     align-items: center;
     display: grid;
     font-size: @fontXsm;
-    grid-template-columns: repeat(5, auto);
+    grid-template-columns: repeat(4, auto);
     // grid-column-gap: 4px;
     // padding: 4px;
     justify-content: center;
     // opacity: 0.5;
 
-    .TechnologyBar__p {
-      padding: 4px;
-    }
+    // .TechnologyBar__p {
+    //   padding: 4px;
+    // }
 
     .TechnologyBar__link {
       .link();
 
-      margin: 0;
+      margin: 0 1px;
       // padding: 0;
     }
   }
